--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tlou-Joel Miller</title>
+    <title>Joel Miller Profile</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="firefly.png">
 </head>
 <body>
-    
+    <div class="badge">Superviviente</div>
+    <div class="profile-card">
+        <img src="./imagenes/joel-miller.jpg" alt="Joel Miller">
+        <h2>Joel Miller</h2>
+        <p>Survivor and protector in a post-apocalyptic world.</p>
+        <div>
+            <ol>
+                <li>Nombre Completo: Joel miller</li>
+                <li>Edad: 51-52 años</li>
+                <li>Nacionalidad: Estados unidos</li>
+                <li>Ocupación: contrabandista</li>
+                <p>Creado: Isaac Garcia</p>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
